# trend-scalping-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  decision-log.md  progress-note.md  pyproject.toml  requirements.txt
config/: backtest.yaml  binance.yaml  mt5.yaml  strategy.yaml
data/: sample_m1.csv
docs/: binance_futures_testnet_testing_plan.md  mt5_demo_testing_plan.md  senior_review_action_plan.md
scripts/: run_binance_demo.py  run_dry_run.py  run_mt5_demo.py  run_replay_backtest.py
src/trend_only_scalper/: __init__.py  cli.py  config.py  indicators.py  journal.py  logging_config.py  main.py  metrics.py  models.py
src/trend_only_scalper/backtest/: __init__.py  data_loader.py  replay.py  simulated_broker.py
src/trend_only_scalper/brokers/: base.py  binance_broker.py  mock_broker.py  mt5_broker.py
src/trend_only_scalper/risk/: cooldown.py  daily_guard.py  risk_manager.py
src/trend_only_scalper/strategy/: confirmation_filter.py  entry_signal.py  position_manager.py  trend_filter.py
tests/: test_binance_broker_contract.py  test_bot_loop.py  test_cli.py  test_config.py  test_daily_guard.py  test_entry_signal.py  test_indicators.py  test_journal.py  test_metrics.py  test_mock_broker.py  test_models.py  test_mt5_broker_contract.py  test_position_manager.py  test_replay_backtest.py  test_trend_filter.py
